[project]
name = "pdf-to-png"
version = "0.1.0"
description = "Uploading a PDF will return a PNG"
readme = "README.md"
authors = [{ name = "Eric Weidow" }, { email = "eric@weidow.se" }]

dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pdf2image==1.17.0",
    "python-multipart==0.0.7",
]

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "black==21.9b0",
    "httpx==0.26.0",
]
